--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -47,7 +47,44 @@
     "page_width": "Page width",
     "show_payment_icons": "Show payment icons",
     "text_style": "Text style",
-    "text": "Text"
+    "text": "Text",
+    "color": "Color",
+    "bg_color": "Background color",
+    "logo": "Logo",
+    "logo_position": "Logo position",
+    "left": "Left",
+    "center": "Center",
+    "right": "Right",
+    "header_gap": "Header gap (desktop)",
+    "header_gap_mobile": "Header gap (mobile)",
+    "logo_max_height": "Logo max height (desktop)",
+    "logo_max_height_mobile": "Logo max height (mobile)",
+    "header_padding_x": "Horizontal padding (desktop)",
+    "header_padding_x_mobile": "Horizontal padding (mobile)",
+    "header_height": "Header height (desktop)",
+    "header_height_mobile": "Header height (mobile)",
+    "nav_gap": "Navigation gap (desktop)",
+    "nav_gap_mobile": "Navigation gap (mobile)",
+    "mobile_menu": "Mobile menu",
+    "mobile_menu_title": "Mobile menu title",
+    "mobile_menu_bg_color": "Mobile menu background color",
+    "mobile_menu_text_color": "Mobile menu text color",
+    "mobile_menu_border_color": "Mobile menu border color",
+    "mobile_menu_title_color": "Mobile menu title color",
+    "effects_and_animations": "Effects and animations",
+    "link_hover_effect": "Link hover effect",
+    "hover_color": "Hover color",
+    "link_spacing": "Link letter spacing",
+    "animation_style": "Animation style",
+    "animation_speed": "Animation speed",
+    "none": "None",
+    "underline": "Underline",
+    "opacity": "Opacity",
+    "color_change": "Color change",
+    "scale": "Scale",
+    "fade": "Fade",
+    "slide": "Slide",
+    "bounce": "Bounce"
   },
   "options": {
     "alignment": {
