--- a/locales/es.json
+++ b/locales/es.json
@@ -77,8 +77,8 @@
       "button_text_color": "Color del texto del botón",
       "button_border_radius": "Radio de borde del botón (px)",
       "logo_image": "Imagen del logo",
-      "favicon_image": "Imagen favicon",
-      "section_vertical_spacing": "Espaciado vertical entre secciones (px)",
+      "favicon_image": "Favicon",
+      "section_vertical_spacing": "Espaciado vertical de la sección (px)",
       "arrow_color": "Color de la flecha",
       "arrow_bg_color": "Color de fondo de la flecha",
       "dot_active_color": "Color del punto activo",
@@ -145,9 +145,22 @@
     "header": "Encabezado",
     "buttons": "Botones",
     "images": "Imágenes",
-    "spacing": "Espaciado"
+    "spacing": "Espaciado",
+    "typography": "Tipografía",
+    "fonts": "Fuentes"
   },
   "labels": {
+    "button_bg_color": "Color de fondo del botón",
+    "button_text_color": "Color del texto del botón",
+    "button_border_radius": "Radio del borde del botón (px)",
+    "logo_image": "Imagen del logo",
+    "favicon_image": "Favicon",
+    "section_vertical_spacing": "Espaciado vertical de la sección (px)",
+    "page_width": "Ancho de página",
+    "page_margin": "Margen de página",
+    "background": "Fondo",
+    "foreground": "Primer plano",
+    "input_corner_radius": "Radio de esquina de entrada",
     "menu": "Menú",
     "color": "Color",
     "bg_color": "Color de fondo",
@@ -183,7 +196,6 @@
     "opacity": "Opacidad",
     "color_change": "Cambio de color",
     "scale": "Escala",
-    "background": "Fondo",
     "fade": "Desvanecer",
     "slide": "Deslizar",
     "bounce": "Rebote"
