feat: mejoras en carrusel de banner de producto (fondo ancho, bordes redondeados, sin blur, ajustes visuales y accesibilidad)

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -149,6 +149,9 @@
     "typography": "Typography",
     "fonts": "Fonts"
   },
+  "newsletter": {
+    "success": "Thank you for subscribing!"
+  },
   "labels": {
     "button_bg_color": "Button background color",
     "button_text_color": "Button text color",
