feat: Implementación del botón de WhatsApp con diseño mejorado

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -137,6 +137,9 @@
     "mobile_navigation": "Mobile navigation"
   },
   "general": {
+    "breadcrumbs": {
+      "home": "Home"
+    },
     "navigation": {
       "menu_open": "Open menu",
       "menu_close": "Close menu"
