Fix: Corregir problemas de galería de imágenes y selector de variantes
- Solucionado problema de imagen duplicada en galería de productos
- Corregido selector de variantes que no aparecía correctamente
- Implementado cambio automático de imagen principal según variante seleccionada
- Mejorada sincronización entre miniaturas y imagen principal
- Agregado panel de debug para información de variantes
- Actualizada lógica de condiciones Liquid para mostrar selector cuando hay múltiples variantes

--- a/locales/es.json
+++ b/locales/es.json
@@ -222,6 +222,7 @@
     "note": "Instrucciones especiales para el vendedor",
     "shipping": "Envío",
     "tax": "Impuesto",
-    "total": "Total"
+    "total": "Total",
+    "total_savings": "Ahorro total"
   }
 }
